--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,43 @@
 body {
   text-align: center;
-/*  background-image: url('http://pngimg.com/upload/iphone_PNG5725.png');
-  background-size: 95%;
-  display: absolute;
+  background-image: url('https://s-media-cache-ak0.pinimg.com/736x/e5/f5/a6/e5f5a6d0f9cb62f21d409cae0fe00610.jpg');
+  background-size: cover;
   background-repeat: no-repeat;*/
 
 }
 
-/*section {
-  margin: 0 auto;
-  height: 750px;
-  width: 650px;
-  border: 2px solid;
-  border-radius: 10%;
-  background-color: #006699;
-}
-*/
-/*h1 {
-  border: 2px solid;
-  border-radius: 15%;
-  width: 175px;
-  text-align: center;
+.top {
   display: inline-block;
-  padding: 10px;
-  background-color: white;
-}*/
-/*
-.board {
-  height: 600px;
-  width: 550px;
-  border: 2px solid black;
-  margin: 0 auto;
-  border-radius: 10%;
-  background-color: white;
-  padding: 3px;
+  width: 200px;
+  border: 2px solid white;
+  background: black;
 }
-*/
+
+h1 {
+  font-family: 'Bangers', cursive;
+  color: white;
+}
+
 .cell {
   border: 2px solid black;
-  height: 40px;
-  width: 40px;
-  margin: 12px;
+  height: 70px;
+  width: 70px;
+  margin: 30px 10px 0 10px;
   display: inline-block;
-  background-color: #006699;
-  border-radius: 20%;
+  background-color: white;
+  vertical-align: top;
 }
-
 
 section {
-  padding: 20px;
+  margin: 0 auto;
+  border: 2px solid white;
+  max-width: 400px;
+  height: 550px;
+  background: black;
+  opacity: 0.8;
+  position: relative;
+  top: 20px;
 }
+
+
 
