--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,17 @@ body {
 
 }
 
-.top {
+/*.top {
   display: inline-block;
   width: 200px;
   border: 2px solid white;
   background: black;
 }
-
-h1 {
+*/
+/*h1 {
   font-family: 'Bangers', cursive;
   color: white;
-}
+}*/
 
 .cell {
   border: 2px solid black;
@@ -36,7 +36,7 @@ section {
   background: black;
   opacity: 0.8;
   position: relative;
-  top: 20px;
+  bottom: 20px;
 }
 
 
