--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-image: url('https://s-media-cache-ak0.pinimg.com/736x/e5/f5/a6/e5f5a6d0f9cb62f21d409cae0fe00610.jpg');
+  /*background-image: url('https://s-media-cache-ak0.pinimg.com/736x/e5/f5/a6/e5f5a6d0f9cb62f21d409cae0fe00610.jpg');*/
   background-size: cover;
   background-repeat: no-repeat;*/
 
@@ -40,4 +40,8 @@ section {
 }
 
 
-
+#clock {
+  width: 400px;
+  height: 400px;
+  border: 5px solid;
+}
