--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  /*background-image: url('https://s-media-cache-ak0.pinimg.com/736x/e5/f5/a6/e5f5a6d0f9cb62f21d409cae0fe00610.jpg');*/
+  background-image: url('https://s-media-cache-ak0.pinimg.com/736x/e5/f5/a6/e5f5a6d0f9cb62f21d409cae0fe00610.jpg');
   background-size: cover;
   background-repeat: no-repeat;*/
 
@@ -31,7 +31,7 @@ body {
 section {
   margin: 0 auto;
   border: 2px solid white;
-  max-width: 400px;
+  max-width: 430px;
   height: 550px;
   background: black;
   opacity: 0.8;
@@ -41,7 +41,25 @@ section {
 
 
 #clock {
-  width: 400px;
-  height: 400px;
+  max-width: 50px;
+  height: 50px;
   border: 5px solid;
+  background-color: white;
+  /*position: relative;*/
+  opacity: 0.8;
+  margin: 0 auto;
+}
+
+#result {
+  max-width: 150px;
+  height: 50px;
+  border: 2px solid;
+  background-color: white;
+  /*position: relative;*/
+  margin: 0 auto;
+  opacity: 0.8;
+}
+
+footer {
+  text-align: center;
 }
