--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   text-align: center;
   background-image: url('https://s-media-cache-ak0.pinimg.com/736x/e5/f5/a6/e5f5a6d0f9cb62f21d409cae0fe00610.jpg');
   background-size: cover;
-  background-repeat: no-repeat;*/
+  background-repeat: no-repeat;
 
 }
 
@@ -28,7 +28,17 @@ body {
   vertical-align: top;
 }
 
-section {
+.wholething {
+  border: 2px solid black;
+  height: 600px;
+  max-width: 800px;
+  display: flex;
+  flex-wrap: no-wrap;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.section1 {
   margin: 0 auto;
   border: 2px solid white;
   max-width: 430px;
@@ -36,12 +46,21 @@ section {
   background: black;
   opacity: 0.8;
   position: relative;
-  bottom: 25px;
+  top: 25px;
 }
 
-
+.section2 {
+  border: 2px solid white;
+  width: 300px;
+  height: 550px;
+  margin: 0 auto;
+  position: relative;
+  top: 25px;
+  background-color: black;
+  opacity: 0.8;
+}
 #clock {
-  max-width: 50px;
+  width: 50px;
   height: 50px;
   border: 5px solid;
   background-color: white;
@@ -51,7 +70,7 @@ section {
 }
 
 #result {
-  max-width: 150px;
+  width: 125px;
   height: 50px;
   border: 2px solid;
   background-color: white;
