--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h1 {
 }
 
 .wholething {
-  border: 2px solid black;
+  border: 2px solid white;
   height: 600px;
   max-width: 800px;
   display: flex;
@@ -57,7 +57,7 @@ h1 {
 .section2 {
   border: 2px solid white;
   width: 300px;
-  height: 150px;
+  height: 90px;
   margin: 0 auto;
   position: relative;
   top: 25px;
@@ -85,15 +85,16 @@ h1 {
 .section3{
   border: 2px solid white;
   width: 300px;
-  height: 150px;
+  height: 90px;
   margin: 0 auto;
   position: relative;
   background-color: black;
   opacity: 0.8;
   display: flex;
-  justify-content: center;
+  top: 50px;
+/*  justify-content: center;
   left: 232px;
-  bottom: 400px;
+  bottom: 400px;*/
 }
 
 #clock2 {
@@ -112,6 +113,16 @@ h1 {
   opacity: 0.9;
 }
 
+.winner {
+  width: 300px;
+  height: 300px;
+  border: 2px solid white;
+  position: relative;
+  top: 88px;
+}
+.rightside {
+  padding-right: 20px;
+}
 
 footer {
   text-align: center;
