--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,55 @@ h1 {
   color: white;
   opacity: 0.8;
 }
+
+.hurry {
+  height: 17px;
+  width: 65px;
+  border: 2px solid black;
+  background-color: red;
+  /*border-radius: 30%;*/
+  position: relative;
+  font-family: 'Bangers', cursive;
+  padding: 10px;
+  bottom: 300px;
+  left: 300px;
+}
+
+.doneyet {
+  height: 32px;
+  width: 100px;
+  border: 2px solid black;
+  background-color: red;
+  /*border-radius: 30%;*/
+  position: relative;
+  font-family: 'Bangers', cursive;
+  padding: 4px;
+  bottom: 300px;
+  left: 400px;
+}
+
+.anydaynow {
+  height: 17px;
+  width: 90px;
+  border: 2px solid black;
+  background-color: red;
+  /*border-radius: 30%;*/
+  position: relative;
+  font-family: 'Bangers', cursive;
+  padding: 4px;
+  bottom: 400px;
+  left: 400px;
+}
+
+.practice {
+  height: 17px;
+  width: 100px;
+  border: 2px solid black;
+  background-color: red;
+  /*border-radius: 30%;*/
+  position: relative;
+  font-family: 'Bangers', cursive;
+  padding: 4px;
+  bottom: 470px;
+  left: 300px;
+}
